--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
   <version>1.0-SNAPSHOT</version>
 
   <name>example-jetty</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>https://github.com/CRaC/example-jetty</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -27,6 +26,11 @@
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-server</artifactId>
       <version>9.4.30.v20200611</version>
+    </dependency>
+    <dependency>
+      <groupId>org.crac</groupId>
+      <artifactId>crac</artifactId>
+      <version>0.1.3</version>
     </dependency>
   </dependencies>
 
@@ -54,13 +58,6 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
       </properties>
-      <dependencies>
-        <dependency>
-          <groupId>io.github.crac</groupId>
-          <artifactId>org-crac</artifactId>
-          <version>0.1.0</version>
-        </dependency>
-      </dependencies>
     </profile>
   </profiles>
 
