--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -54,6 +54,12 @@ jobs:
         sudo tar -axf $archive
         echo JDK=${archive%%.tar.gz} >> $GITHUB_ENV
 
+    - name: Use specific API
+      if: matrix.api != 'org'
+      run: |
+        find -name '*.java' | xargs sed -i 's/org\.crac/${{ matrix.api }}.crac/g'
+        git diff
+
     - run: |
         if [ ${{ matrix.build_jdk }} = crac ]; then
           export JAVA_HOME=${{ env.JDK }}
